Finalización del apartado 11, revisar el logout